# Visualisierung-NS-Zwangsarbeit

./: .env.example  .gitignore  .pylintrc  README.md  docker-compose.yml  dockerfile  excel_migration.ipynb  excel_migration.py  pyproject.toml  requirements.txt  script.sh  stack.yml
.github/: services.yaml  stack.yml
.github/workflows/: build.yaml  eslint.yml  mittwald.yml  pylint.yml  stack.yaml  stack.yml  unittest.yaml  unittest.yml
app/: README.md  database.py  excel_migration.py  geography.py  main.py  map.py  sample.xml
app/data/: README.md  crud.json
app/static/: style.css
app/templates/: base.html  database.html  map.html
backend/: FoliumOsm.py  README.md  app.py  arrows.py  database.py  directus.py  directusHelper.py  dockerfile  draw_arrow.py  draw_circle.py  geo_cache.py  geo_map.py  geojson_cache.py  historical_map.py  housing_data.py  main.py  map_drawer.py  ohm.py  osm.py  person_data_country.py  requirements.txt
backend/api/: README.md  __init__.py  debug.py  housing_data_api.py  ohm.py  ohm_api.py  osm.py  person_data.py  person_data_cities.py  person_data_country.py  person_data_country_api.py
backend/mapper/: country_bbox_map.py  country_map.py
backend/static/: style.css
backend/templates/: index.html
cockpit/config/: config.php
frontend/: dockerfile  package-lock.json  package.json
frontend/src/: App.css  App.js  (+1 more)
scripts/: .~lock.Gefangenenbuch.xlsx#  Gefangenenbuch.xlsx  IMIs.xlsx  Ostarbeitendenliste.xlsx  README.md  __init__.py  directus_init.py  excel_migration.py  migrate_data.py  schema.json  sql_migration.py  testing.py
(+60 files in other folders)
